syntax = "proto3";

package serv.access;

service AccessService {
    rpc CreateAccess(CreateAccessRequest) returns (CreateAccessResponse) {}
    rpc ReadAccess(ReadAccessRequest) returns (ReadAccessResponse) {}
    rpc DeleteRefreshToken(DeleteRefreshTokenRequest) returns (DeleteRefreshTokenResponse) {}
    rpc RenewAccessToken(RenewAccessTokenRequest) returns (RenewAccessTokenResponse) {}
    rpc DecodeAccessToken(DecodeAccessTokenRequest) returns (DecodeAccessTokenResponse) {}
}

message CreateAccessRequest {
    string userId = 1;
}

message CreateAccessResponse {
    string refreshToken = 1;
    string accessToken = 2;
}

message DeleteRefreshTokenRequest {
    string refreshToken = 1;
}

message DeleteRefreshTokenResponse {
    bool success = 1;
}

message DecodeAccessTokenRequest {
    string accessToken = 1;
}

message DecodeAccessTokenResponse {
    string userId = 1;
}

message RenewAccessTokenRequest {
    string refreshToken = 1;
}

message RenewAccessTokenResponse {
    string accessToken = 1;
}

message ReadAccessRequest {
    string refreshToken = 1;
}

message ReadAccessResponse {
    string userId = 1;
}
